fixed alignment issues

--- a/web/headers.css
+++ b/web/headers.css
@@ -8,4 +8,12 @@
 	 border-style: solid;
 }
 
+.banners ul{
+	list-style: none;
+	text-align: left;
+}
+
+.banners li{
+	display: inline;
+}
 
